# KernelSimulator0

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile
data_structures/: linked_list.c  linked_list.h
error/: error.h
input/: input.h
inputs/: input.txt
testing/: ll_test.c  testing.c  testing.h  utils_testing.c
utils/: utils.c  utils.h
